# causalbench-llm

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: technical_note.md
experiments/: fixed_split_v1.jsonl  fixed_split_v1_meta.json
results/: summary_model_grid.md
results/runs/dev/: results_table.md
results/runs/distilgpt2_v1/: results_table.md
results/runs/qwen05b/: results_table.md
results/runs/qwen25/: results_table.md
results/runs/qwen25_1p5b_v1/: results_table.md
results/runs/qwen25_1p5b_v1_heuristic/: results_table.md
results/runs/qwen25_3b_v1/: results_table.md
results/runs/qwen25_3b_v1_heuristic/: results_table.md
results/runs/qwen25_v2/: results_table.md
results/runs/qwen25_v3/: results_table.md
results/runs/qwen25_v4/: results_table.md
results/runs/qwen25_v5_heuristic/: results_table.md
results/runs/qwen25_v6/: results_table.md
results/runs/qwen25_v8/: results_table.md
results/runs/qwen25_v8_heuristic/: results_table.md
scripts/: run_model_grid.sh
src/causalbench/eval/: aggregate_reports.py  export_split.py  heuristic_baseline.py  inspect_failures.py  run_eval.py  summarize.py
src/causalbench/models/: hf_runner.py  openrouter_runner.py
src/causalbench/scm/: dag.py  generate.py  intervene.py  simulate.py
src/causalbench/tasks/: build_instances.py  instances.py  scoring.py
tests/: test_aggregate_reports.py  test_build_instances.py  test_export_split.py  test_heuristic_baseline.py  test_intervene.py  test_openrouter_runner.py  test_run_eval_backend.py  test_scm_sampling.py  test_summarize.py
