[project]
name = "causalbench-llm"
version = "0.1.0"
description = "Synthetic SCM tasks to evaluate LLM causal reasoning under confounding/interventions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["^cbench/", "^\\.venv/"]

[[tool.mypy.overrides]]
module = ["causalbench.models.hf_runner"]
ignore_errors = true
